# sanitize-image

./: .gitignore  CMakeLists.txt  DOC.md  LICENSE  README.md
cmake/: FindCheck.cmake  FindTurboJpeg.cmake
include/: converters.h  quantizers.h  sanitize-image.h
src/: CMakeLists.txt  converters.c  converters.h  decoders.c  encoders.c  magic.c  main.c  quantizers.c  quantizers.h  randomizers.c  resizers.c  sanitize-image.c  utils.c
tests/: CMakeLists.txt  make-tests.c  test-utils.c  test_sanitize-image.c  tests-utils.h  tests.c
